# hyper_make

./: .env.example  .gitignore  .session_checkpoint.md  CLAUDE.md  Cargo.toml  DESIGN_BAYESIAN_WARMUP_BYPASS.md  DESIGN_POSITION_LIMIT_HARMONIZATION.md  GLFT_CORRECTIONS.md  LICENSE.md  MICROPRICE_THEORY.md  PLAN_HIP3_MAINNET_SUPPORT.md  PROJECT_INDEX.json  README.md  WORKFLOW.md  analysis_report.md  cargo_errors.txt  ci.sh  dashboard.html  estimator_changes.rs  estimator_redesign.md  fills_with_signals.json  flow.md  glft_kappa_analysis.md  limit_order.csv  market_maker_live.toml  market_making_complete_manual.md  mm-dashboard-fixed.html  spread_analysis.md  stochastic_processes_first_principles.md  strategy_with_dynamic_gamma.md  tmp_find_magic.py  tmp_magic_results.txt  tmp_summarize.py  trade_history (8).csv  trade_history.csv  unified_order_book_first_principles_review.md
.cargo/: config.toml
.claude/: CLAUDE.md  PROJECT_INDEX.json  PROJECT_INDEX.md  ownership.json  ralph-loop.local.md  settings.json  settings.local.json
.serena/: project.yml
docs/: 4hr_run_analysis_2026-02-02.md  ADVANCED_FEATURE_ENGINEERING.md  BACKTRACE_REFERENCE.md  CHURN_REDUCTION_SESSION.md  Implementation Plan  SMALL_FISH_PROMPT.md  SMALL_FISH_STRATEGY.md  STOCHASTIC_PARAMETERS_ANALYSIS.md  VALIDATION_FINDINGS.md  WORKFLOW.md  Walkthrough  alpha-improvement-roadmap.md  arbitrary_parameters_report.md  architecture_audit.md  audit.md  audit_results.md  bayesian-parameter-analysis.md  bayesian_audit_and_extension_plan.md  claude-code-architecture-redesign.md  diagram.md  event_to_quote_bayesian.md  extend.md  fuck.md  fun  fun.md  implementation_plan.md  improvements.md  isee.md  learn.md  log_check.md  logging-design.md  market-maker-strategy-redesign.md  more_problems.md  mortem.md  new.md  new_Plan.md  new_problem.md  plan.md  plan_new.md  problem.md  (+18 more)
examples/: README.md  agent.rs  info.rs  (+32 more)
(+996 files in other folders)
