[package]
name = "hyperliquid_rust_sdk"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for Hyperliquid"
homepage = "https://hyperliquid.xyz/"
readme = "README.md"
documentation = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"
repository = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "1.0", default-features = false, features = [
  "dyn-abi",
  "sol-types",
  "signer-local",
] }
async-trait = "0.1"
axum = "0.7"
chrono = "0.4.26"
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"
env_logger = "0.11.8"
futures-util = "0.3.28"
lazy_static = "1.0"
log = "0.4.19"
reqwest = "0.12.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.0", features = ["v4"] }

# Latency optimization dependencies
portable-atomic = { version = "1.6", features = ["float"] }
smallvec = "1.11"
bumpalo = { version = "3.16", features = ["collections"] }

# Random number generation for stochastic allocation
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

[[bin]]
name = "market_maker"
path = "src/bin/market_maker.rs"

# Fast release builds (for dev iteration)
[profile.release]
incremental = true
debug = 0

# Production builds (max performance, slower compile)
[profile.release-prod]
inherits = "release"
incremental = false
lto = "thin"
codegen-units = 1
